# pybeepop

./: .gitignore  README.md  build.py  pybeepop_example.ipynb  pybeepop_test.ipynb  pyproject.toml  pyproject_cibw.toml
.github/workflows/: build-and-publish.yml  build-beepop.yml  ci-build-publish.yml  ci-build-wheel.yml  draft-pdf.yml  generate-docs-site.yml  generate_doc_site.yml  generate_site.yml  run-tests-ubuntu.yml  run-tests-windows.yml  run_pytests_ubuntu  run_tests_ubuntu  run_tests_ubuntu.yml  run_tests_windows.yml
docs/: BeePop_exposed_parameters.csv  residue_file_readme.txt  weather_readme.txt
docs/pybeepop/: index.html  pybeepop.html  tools.html
paper/: paper.bib  paper.md
pybeepop/: __init__.py  pybeepop.py  tools.py
pybeepop/data/: BeePop_exposed_parameters.csv
test_data/: cedar_grove_NC_weather.txt  example_parameters.txt  test_parameters_invalid.txt
tests/: test_pybeepop.py
