[tool.poetry]
name = "pybeepop-plus"
version = "0.1.0"
description = ""
authors = ["Jeffrey Minucci <minucci.jeffrey@epa.gov>"]
readme = "README.md"
documentation = "https://usepa.github.io/pybeepop/"
include = ["lib/*.dll", "lib/*.so"]
classifiers = [
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
]

[tool.poetry.dependencies]
python = "^3.9.0"
pandas = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"