[tool.poetry]
name = "pybeepop-plus"
version = "0.1.0"
description = "EPA's Python wrapper for the EPA/USDA honey bee colony model BeePop+"
authors = ["Jeffrey Minucci <minucci.jeffrey@epa.gov>"]
readme = "README.md"
documentation = "https://usepa.github.io/pybeepop/"
packages = [
    { include = "pybeepop", from ="." },
]
include = ["lib/*.dll", "lib/*.so", "data/*"]
classifiers = [
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
]

[tool.poetry.dependencies]
python = "^3.8.0"
pandas = "^2.0.0"

[build-system]
requires = ["poetry-core", "setuptools"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.build]
script = "build.py"
generate-setup-file = true

[tool.cibuildwheel.linux]
before-all = "yum -y install cmake" 
before-build = [
    "cd beepop",
    "mkdir build",
    "cd build",
    "cmake -DCMAKE_POSITION_INDEPENDENT_CODE=ON ..",
    "cmake --build . --config Release",
    "pwd",
    "cp liblibvpop.so ../../pybeepop/lib",
    "mv -f ../../pybeepop/lib/liblibvpop.so ../../pybeepop/lib/beepop_linux.so",
]

[tool.cibuildwheel.windows]
before-build = [
    "cd beepop",
    "mkdir build",
    "cd build",
    "cmake -DCMAKE_POSITION_INDEPENDENT_CODE=ON ..",
    "cmake --build . --config Release",
    "copy Release\\libvpop.dll ..\\..\\pybeepop\\lib",
    "move /y ..\\..\\pybeepop\\lib\\libvpop.dll ..\\..\\pybeepop\\lib\\beepop_win64.dll",
]

[[tool.cibuildwheel.overrides]]
select = "*-musllinux*"
before-all = "apk add cmake"
